# your-repo-name-here

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
.claude/: CLAUDE_CLOUD.md  CLAUDE_LOCAL.md  ENVIRONMENT_SPLIT_GUIDE.md  LOCAL_CLI_FEATURES.md  README.md  README_ENVIRONMENT_DETECTION.md  env_detect.py  hooks.json  session_start_hook.py  startup.py
.claude/agents/: validate_agent_inputs.md
.claude/agents/cocotb-progressive-test-designer/: README.md  agent.md
.claude/agents/cocotb-progressive-test-runner/: README.md  agent.md
.claude/agents/forge-new-component/: agent.md
.claude/agents/forge-vhdl-component-generator/: agent.md
.claude/commands/: README.md  forge-start.md  gather-requirements.md
.claude/system_prompts/: interactive_session_default.md
.devcontainer/: devcontainer.json
cocotb_tests/: README.md  __init__.py  conftest.py  run.py  test_base.py  test_configs.py
cocotb_tests/cocotb_test_wrappers/: README.md  forge_lut_pkg_tb_wrapper.vhd  forge_voltage_3v3_pkg_tb_wrapper.vhd  forge_voltage_5v0_pkg_tb_wrapper.vhd  forge_voltage_5v_bipolar_pkg_tb_wrapper.vhd
cocotb_tests/components/: README.md  __init__.py  test_forge_lut_pkg_progressive.py  test_forge_util_clk_divider_progressive.py  test_forge_util_edge_detector_pw_progressive.py  test_forge_util_majority_voter_progressive.py  test_forge_voltage_3v3_pkg_progressive.py  test_forge_voltage_5v0_pkg_progressive.py  test_forge_voltage_5v_bipolar_pkg_progressive.py
cocotb_tests/components/forge_hierarchical_encoder_tests/: P1_forge_hierarchical_encoder_basic.py  __init__.py  forge_hierarchical_encoder_constants.py
cocotb_tests/components/forge_lut_pkg_tests/: __init__.py  forge_lut_pkg_constants.py
cocotb_tests/components/forge_util_clk_divider_tests/: P1_forge_util_clk_divider_basic.py  P2_forge_util_clk_divider_intermediate.py  __init__.py  forge_util_clk_divider_constants.py
cocotb_tests/components/forge_util_edge_detector_pw_tests/: P1_edge_detector_pw_basic.py  __init__.py  edge_detector_pw_constants.py
cocotb_tests/components/forge_util_majority_voter_tests/: P1_forge_util_majority_voter_basic.py  __init__.py  (+1 more)
cocotb_tests/integration/: README.md  __init__.py  test_platform_bpd_deployment.py  test_platform_forge_control.py  test_platform_oscilloscope_capture.py  test_platform_oscilloscope_capture_constants.py  test_platform_routing_integration.py  test_platform_routing_integration_constants.py
docs/: AGENT3_COMMIT_PATTERN.md  BETA_TEST_REPORT_AI_FIRST_WORKFLOW.md  CI-CD-workflow-proposal.md  CLOUD_SETUP_PROMPT.md  COCOTB_TROUBLESHOOTING.md  ONBOARDING.md  README.md  VHDL_CODING_STANDARDS.md
docs/archive/: CLEANUP_2025-11-08.md
docs/diagnostic_reports/: README.md
examples/: README.md
examples/counter/: README.md
python/: README.md
python/forge_cocotb/: README.md  pyproject.toml
python/forge_cocotb/forge_cocotb/: __init__.py  ghdl_filter.py  mcc_utils.py  runner.py  test_base.py
python/forge_platform/: README.md  pyproject.toml
python/forge_platform/forge_platform/: __init__.py  backend.py  network_cr.py  simulation_backend.py
python/forge_platform/forge_platform/simulators/: __init__.py  cloud_compile.py  oscilloscope.py
python/forge_tools/: README.md  pyproject.toml
python_tests/: README.md
scripts/: README.md  cloud_setup_with_ghdl.py  setup.sh  validate_setup.sh
vhdl/: README.md
vhdl/components/: README.md
workflow/: AI_FIRST_REQUIREMENTS.md  ENGINEER_REQUIREMENTS.md  README.md  VALIDATION_REPORT_3TIER_SYSTEM.md  WORKFLOW_VALIDATION_REPORT.md
workflow/prompts/: 1-generate-vhdl.md  2-design-tests.md  3-run-tests.md  full-workflow.md
workflow/specs/: README.md
(+33 files in other folders)
