[project]
name = "forge-cocotb"
version = "3.0.0"
description = "CocoTB testing framework for VHDL components with progressive testing (P1/P2/P3)"
requires-python = ">=3.10"

dependencies = [
    "cocotb>=1.8.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_cocotb"]
