[project]
name = "forge-tools"
version = "3.0.0"
description = "VHDL utility tools (HVS decoder, register decoders, utilities)"
requires-python = ">=3.10"

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_tools"]
